# mahu

./: .gitignore  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.fcontext/_topics/: mahu-agent-plugin-platform-research.md
.github/workflows/: cicd.yml  release.yml
adapters/: codex.md  copilot.md  workbuddy.md
skills/: context.md  presentation.md  prototype.md  review.md  test.md
skills/mahu/: SKILL.md
skills/mahu/adapters/: claude.md  codex.md  copilot.md  cursor.md  opencode.md  trae.md  workbuddy.md
src/mahu/: __init__.py  cli.py  dependencies.py  enable.py  manifest.py  registry.py  router.py
tests/: __init__.py  test_cli.py  test_dependencies.py  test_enable.py  test_manifest.py  test_registry.py  test_router.py
